<resources>
	<string name="app_name">Strunner</string>
	<string name="greeting_text">Yeah! You came again!</string>
	<string name="description">Welcome picture</string>
	<string name="button">Add paints</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="let_s_go">Let\'s go!</string>
	<string name="login">Login</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="desc_photoRun" translatable="false">Photo of the runner</string>
	<string name="desc_valid" translatable="false">Valid indicator</string>
	<string name="photo_like" translatable="false">photo like</string>
	<string name="author">Athlete name</string>
	<string name="detailed_title">Workout name</string>
	<string name="desc_avatar" translatable="false">avatar</string>
	<string name="desc_route" translatable="false">route</string>
	<string name="votes">75 votes</string>

	<string name="onboard_image_path" translatable="false">onboard/%d.png</string>
	<string name="image_loading_error">Problem in loading image</string>
	<string name="onboard_imagine" translatable="false">onboard imagine</string>
	<string name="auth_canceled">Authentication failed</string>
	<string name="distance">Distance</string>
	<string name="distance_example" translatable="false">5000 m</string>
	<string name="time">Time</string>
	<string name="time_example" translatable="false">00:20:31</string>
	<string name="avg_speed">Avg. speed</string>
	<string name="avg_speed_ex" translatable="false">4 m/s</string>
	<string name="max_speed">Max. speed</string>
	<string name="max_speed_ex" translatable="false">6 m/s</string>
	<string name="elevation_gain">Elevation gain</string>
	<string name="elev_gain_ex" translatable="false">50 m</string>
	<string name="max_elevation">Max. elevation</string>
	<string name="max_elev_ex" translatable="false">120 m</string>
	<string name="plug" translatable="false">-----</string>
	<string-array name="onboard_names">
		<item>We monitor performance like no other</item>
		<item>Social network for athletes</item>
		<item>Share your location with your friends</item>
		<item>Set new records on your territory</item>
	</string-array>
	<string name="no_activities">You do not have any training yet</string>
	<string name="not_connected">Not internet connected</string>
	<string name="page_title">My workouts</string>
	<string name="profile" translatable="false">Profile</string>
	<string name="distance_m">overcame %1$s meters</string>
	<string name="not_workout">Workout not loaded yet</string>
	<string name="profile_title">My profile</string>
</resources>