<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".profile.ProfileFragment">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/topAppBar"
			style="@style/Widget.MaterialComponents.Toolbar.Primary"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
			app:title="@string/profile_title" />
	</com.google.android.material.appbar.AppBarLayout>

	<ImageView
		android:id="@+id/ivAvatar"
		android:layout_width="70dp"
		android:layout_height="70dp"
		app:srcCompat="@drawable/avatar_m"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/appBar"
		android:layout_margin="20dp"
		android:contentDescription="@string/desc_avatar"/>

	<TextView
		android:id="@+id/tvAuthor"
		android:text="@string/author"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:textColor="@color/black"
		app:layout_constraintTop_toBottomOf="@id/appBar"
		app:layout_constraintStart_toEndOf="@+id/ivAvatar"
		android:layout_marginStart="20dp"
		android:layout_marginTop="45dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>